--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 # Required substituion variables:
-# - _GCP_FASTAPI_POETRY_DOMAIN
+# - _WORDLE_API_DOMAIN
 
 
 steps:
@@ -7,10 +7,10 @@ steps:
     entrypoint: "bash"
     args:
       - -c
-      - docker build -t gcr.io/$PROJECT_ID/gcp-fastapi-poetry:${TAG_NAME} -f Dockerfile .
+      - docker build -t gcr.io/$PROJECT_ID/wordle-api:${TAG_NAME} -f Dockerfile .
 
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/$PROJECT_ID/gcp-fastapi-poetry:${TAG_NAME}"]
+    args: ["push", "gcr.io/$PROJECT_ID/wordle-api:${TAG_NAME}"]
 
   # Deploy service image to Cloud Run
   - name: "gcr.io/cloud-builders/gcloud"
@@ -19,11 +19,11 @@ steps:
       - -c
       - >
         gcloud
-        run deploy ${TAG_NAME}-gcp-fastapi-poetry
+        run deploy ${TAG_NAME}-wordle-api
         --cpu 1
         --memory 256M
         --max-instances 5
-        --image gcr.io/$PROJECT_ID/gcp-fastapi-poetry:${TAG_NAME}
+        --image gcr.io/$PROJECT_ID/wordle-api:${TAG_NAME}
         --region europe-west1
         --platform managed
         --allow-unauthenticated
@@ -36,7 +36,7 @@ steps:
       - >
         gcloud
         beta run domain-mappings create
-        --service ${TAG_NAME}-gcp-fastapi-poetry
-        --domain ${TAG_NAME}.${_GCP_FASTAPI_POETRY_DOMAIN}
+        --service ${TAG_NAME}-wordle-api
+        --domain ${TAG_NAME}.${_WORDLE_API_DOMAIN}
         --region europe-west1
         || true
